// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestableList Rendering renders itself correctly 1`] = `
<View
  style={
    Array [
      Object {},
    ]
  }
  testID="list"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingBottom": 12.5,
        "paddingHorizontal": 11,
        "paddingTop": 13.75,
      }
    }
    testID="parent"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
      testID="parent-label"
    >
      Campus
    </Text>
    <Image
      source={
        Object {
          "testUri": "../../../source/images/chevron-right-black.png",
        }
      }
      style={
        Array [
          Object {
            "height": 12,
            "width": 12,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 22,
          "paddingLeft": 22,
          "paddingRight": 22,
          "paddingTop": 22,
        },
      ]
    }
    testID="children"
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 13.75,
          "opacity": 1,
        }
      }
      testID="child"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1C2530",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "textAlign": "left",
            },
          ]
        }
        testID="child-label"
      >
        Lake Forest
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../source/images/close-light-black.png",
          }
        }
        style={
          Array [
            Object {
              "height": 8,
              "width": 8,
            },
          ]
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 13.75,
          "opacity": 1,
        }
      }
      testID="child"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1C2530",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "textAlign": "left",
            },
          ]
        }
        testID="child-label"
      >
        Laguna Woods
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../source/images/close-light-black.png",
          }
        }
        style={
          Array [
            Object {
              "height": 8,
              "width": 8,
            },
          ]
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 12,
          "left": 12,
          "right": 12,
          "top": 12,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 0,
          "opacity": 1,
        }
      }
      testID="child"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1C2530",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "400",
              "textAlign": "left",
            },
          ]
        }
        testID="child-label"
      >
        San Diego
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../source/images/close-light-black.png",
          }
        }
        style={
          Array [
            Object {
              "height": 8,
              "width": 8,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingBottom": 12.5,
        "paddingHorizontal": 11,
        "paddingTop": 13.75,
      }
    }
    testID="parent"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
      testID="parent-label"
    >
      Category
    </Text>
    <Image
      source={
        Object {
          "testUri": "../../../source/images/chevron-right-black.png",
        }
      }
      style={
        Array [
          Object {
            "height": 12,
            "width": 12,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    nativeID="animatedComponent"
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingBottom": 12.5,
        "paddingHorizontal": 11,
        "paddingTop": 13.75,
      }
    }
    testID="parent"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#1C2530",
            "fontFamily": "System",
            "fontSize": 14,
            "fontWeight": "500",
            "textAlign": "left",
          },
        ]
      }
      testID="parent-label"
    >
      Tags
    </Text>
    <Image
      source={
        Object {
          "testUri": "../../../source/images/chevron-right-black.png",
        }
      }
      style={
        Array [
          Object {
            "height": 12,
            "width": 12,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#DBE0E3",
          "height": 1,
          "width": "100%",
        },
      ]
    }
    testID="divider"
  />
</View>
`;

exports[`NestableListChildItem Rendering renders itself correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 12,
      "left": 12,
      "right": 12,
      "top": 12,
    }
  }
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 13.75,
      "opacity": 1,
    }
  }
  testID="child"
>
  <Text
    style={
      Array [
        Object {
          "color": "#1C2530",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "textAlign": "left",
        },
      ]
    }
    testID="child-label"
  >
    Lake Forest
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../source/images/close-light-black.png",
      }
    }
    style={
      Array [
        Object {
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`NestableListParentItem Rendering renders itself correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    Object {
      "bottom": 12,
      "left": 12,
      "right": 12,
      "top": 12,
    }
  }
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "opacity": 1,
      "paddingBottom": 12.5,
      "paddingHorizontal": 11,
      "paddingTop": 13.75,
    }
  }
  testID="parent"
>
  <Text
    style={
      Array [
        Object {
          "color": "#1C2530",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "textAlign": "left",
        },
      ]
    }
    testID="parent-label"
  >
    Campus
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../source/images/chevron-right-black.png",
      }
    }
    style={
      Array [
        Object {
          "height": 12,
          "width": 12,
        },
      ]
    }
  />
</View>
`;
